xee-xpath/tests/snapshots/xpath__cast_as_year_month_duration.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'P1Y2M' cast as xs:yearMonthDuration\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                YearMonthDuration(
                    14,
                ),
            ),
        ),
    },
)
