xee-xpath/tests/snapshots/xpath__cast_date.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019-01-01' cast as xs:date\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Date(
                    NaiveDateWithOffset {
                        date: 2019-01-01,
                        offset: None,
                    },
                ),
            ),
        ),
    },
)
