xee-xpath/tests/snapshots/xpath__cast_date_time_offset.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019-01-01T00:00:00+01:00' cast as xs:dateTime\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                DateTime(
                    2019-01-01T00:00:00,
                    Some(
                        +01:00,
                    ),
                ),
            ),
        ),
    },
)
