xee-xpath/tests/snapshots/xpath__cast_date_time_z.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019-01-01T00:00:00Z' cast as xs:dateTime\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                DateTime(
                    NaiveDateTimeWithOffset {
                        date_time: 2019-01-01T00:00:00,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
