xee-xpath/tests/snapshots/xpath__cast_date_z.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019-01-01Z' cast as xs:date\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Date(
                    NaiveDateWithOffset {
                        date: 2019-01-01,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
