xee-xpath/tests/snapshots/xpath__cast_empty_sequence_as_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() cast as xs:string\")"
---
Err(
    SpannedType {
        src: "() cast as xs:string",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: 20,
        },
    },
)
